#ifndef SMARTRADAR_BUTTON_H
#define SMARTRADAR_BUTTON_H

namespace smartradar
{
    class Button
    {
    public:
        Button() {};
        ~Button() {};
    };
}

#endif